# MD-Viewer

./: .gitattributes  README.md  docs-preview.ps1  package-lock.json  package.json  run_server.cmd  viewer.html
.docs/: 01_viewer-user-guide.md  02_document-author-guide.md  README.md
.docs/development/: requirements.md  specification.md  todo.md
docs/: 01_viewer-user-guide.md  02_document-author-guide.md  README.md
docs/development/: requirements.md  setup.md  specification.md  todo.md
src/: main.css  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tools/: prepare-tauri-assets.mjs
