[package]
name = "md-viewer"
version = "0.1.0"
description = "Local Markdown document viewer"
authors = ["Igo Najimi Project"]
edition = "2021"

[lib]
name = "md_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
